--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand col-sm-8 d-flex flex-row ms-5" href="#"><img src="assets/img/viajes.svg" class="logo"
-            alt="logo" />Viajes
-          Chile</a>
+        <a class="navbar-brand col-sm-8 d-flex flex-row ms-5 text-white" href="#"><img src="assets/img/viajes.svg" class="logo" alt="logo" />Viajes Chile</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,16 +29,16 @@
         <div class="collapse navbar-collapse col-sm-8 ml-auto" id="navbarText">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item mx-2">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link active" href="#">Quiénes somos</a>
+              <a class="nav-link active text-white" href="#aboutUs">Quiénes somos</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link active" href="#">Destacados</a>
+              <a class="nav-link active text-white" href="#featured">Destacados</a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link active" href="#">Contacto</a>
+              <a class="nav-link active text-white" href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -72,8 +70,129 @@
   </div>
 
   <!-- About us -->
+  <a name="aboutUs"></a>
+  <section class="d-none d-sm-flex flex-column justify-content-center align-items-center bg-dark py-5">
+      <h3 class="text-white mb-3 titulo">¿QUIÉNES SOMOS?</h3>
+      <div class="container row border-top border-info pt-4">
+          <div class="col-sm m-2">
+              <div class="bg-info d-flex justify-content-center p-1 mb-2">
+                  <i class="fas fa-plane fa-2x text-white"></i>
+              </div>
+              <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                  obcaecat cupiditat non proident, sunt in culpa qui officia 
+                  deserunt mollit anim id est laborum. 
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur.
+              </p>
+          </div>
+          <div class="col-sm m-2">
+              <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                  obcaecat cupiditat non proident, sunt in culpa qui officia 
+                  deserunt mollit anim id est laborum. 
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur.
+              </p>
+              <div class="bg-info d-flex justify-content-center p-1 mb-2">
+                  <i class="fas fa-mountain fa-2x text-white"></i>
+              </div>
+          </div>
+          <div class="col-sm m-2">
+              <div class="bg-info d-flex justify-content-center p-1 mb-2">
+                  <i class="fas fa-route fa-2x text-white"></i>
+              </div>
+              <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                  obcaecat cupiditat non proident, sunt in culpa qui officia 
+                  deserunt mollit anim id est laborum. 
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                  ullamco laboris nisi ut aliquid ex ea commodi consequat. 
+                  Quis aute iure reprehenderit in voluptate velit esse 
+                  cillum dolore eu fugiat nulla pariatur.
+              </p>
+          </div>
+      </div>
+    </section>
+
   <!-- Featured -->
+  <a name="featured"></a>
+  <section class="d-flex flex-column justify-content-center align-items-center bg-dark py-5">
+      <h3 class="text-white mb-3 titulo">Destacados</h3>
+      <div class="container row d-flex justify-content-center border-top border-info pt-4">
+          
+          <div class="card m-2 p-0">
+              <img src="assets/img/card1.jpg" class="img card-img-top" alt="Landscape">
+              <div class="card-body bg-info text-white">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, 
+                  consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua.</p>
+              </div>
+          </div>
+
+          <div class="card m-2 p-0">
+              <img src="assets/img/card2.jpg" class="img card-img-top" alt="Landscape">
+              <div class="card-body bg-info text-white">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, 
+                  consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua.</p>
+              </div>
+          </div>
+
+          <div class="card m-2 p-0">
+              <img src="assets/img/card3.jpg" class="img card-img-top" alt="Landscape">
+              <div class="card-body bg-info text-white">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, 
+                  consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua.</p>
+              </div>
+          </div>
+
+          <div class="card m-2 p-0">
+              <img src="assets/img/card4.jpg" class="img card-img-top" alt="Landscape">
+              <div class="card-body bg-info text-white">
+              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet, 
+                  consectetur adipiscing elit, 
+                  sed eiusmod tempor incidunt ut labore et dolore magna 
+                  aliqua.</p>
+              </div>
+          </div>
+      </div>
+  </section>
   <!-- Contact us -->
+  <!-- Footer -->
+<footer>
+
+</footer>
 
   <!-- JQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
