--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <!--Google Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Chicle&family=Cookie&family=Oswald&family=Raleway:wght@100&display=swap" rel="stylesheet">
   <!--Font Awesome-->
   <script src="https://kit.fontawesome.com/27b16d7393.js" crossorigin="anonymous"></script>
   <!--My style CSS-->
@@ -19,10 +19,10 @@
 <body>
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand col-sm-8 d-flex flex-row ms-5 text-white" href="#"><img src="assets/img/viajes.svg" class="logo" alt="logo" />Viajes Chile</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        <button class="navbar-toggler btn-nav" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -70,9 +70,9 @@
   </div>
 
   <!-- About us -->
-  <a name="aboutUs"></a>
-  <section class="d-none d-sm-flex flex-column justify-content-center align-items-center bg-dark py-5">
-      <h3 class="text-white mb-3 titulo">¿QUIÉNES SOMOS?</h3>
+  <a name="aboutUs" class="aboutUs"></a>
+  <section class="d-none d-sm-flex flex-column justify-content-center align-items-center bg-black py-5">
+      <h3 class="text-white mb-3 title">¿QUIÉNES SOMOS?</h3>
       <div class="container row border-top border-info pt-4">
           <div class="col-sm m-2">
               <div class="bg-info d-flex justify-content-center p-1 mb-2">
@@ -138,15 +138,15 @@
     </section>
 
   <!-- Featured -->
-  <a name="featured"></a>
-  <section class="d-flex flex-column justify-content-center align-items-center bg-dark py-5">
-      <h3 class="text-white mb-3 titulo">Destacados</h3>
+  <a name="featured" class="featured"></a>
+  <section class="d-flex flex-column justify-content-center align-items-center bg-black py-5">
+      <h3 class="text-white mb-3 title">DESTACADOS</h3>
       <div class="container row d-flex justify-content-center border-top border-info pt-4">
           
           <div class="card m-2 p-0">
               <img src="assets/img/card1.jpg" class="img card-img-top" alt="Landscape">
               <div class="card-body bg-info text-white">
-              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <h5 class="card-title title">Lorem ipsum dolor sit amet</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, 
                   consectetur adipiscing elit, 
                   sed eiusmod tempor incidunt ut labore et dolore magna 
@@ -157,7 +157,7 @@
           <div class="card m-2 p-0">
               <img src="assets/img/card2.jpg" class="img card-img-top" alt="Landscape">
               <div class="card-body bg-info text-white">
-              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <h5 class="card-title title">Lorem ipsum dolor sit amet</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, 
                   consectetur adipiscing elit, 
                   sed eiusmod tempor incidunt ut labore et dolore magna 
@@ -168,7 +168,7 @@
           <div class="card m-2 p-0">
               <img src="assets/img/card3.jpg" class="img card-img-top" alt="Landscape">
               <div class="card-body bg-info text-white">
-              <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
+              <h5 class="card-title title">Lorem ipsum dolor sit amet</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, 
                   consectetur adipiscing elit, 
                   sed eiusmod tempor incidunt ut labore et dolore magna 
@@ -189,8 +189,38 @@
       </div>
   </section>
   <!-- Contact us -->
+  <a name="contact" ></a>
+  <div class="contact container-fluid d-flex flex-column justify-content-center align-items-center bg-black py-5">
+      <h3 class="text-white mb-3 title contact" data-toggle="tooltip" data-placement="bottom" title="¡Contáctanos, no esperes más!">CONTACTO</h3>
+      
+      <form id="form" class="container d-flex flex-column border-top border-info pt-4">
+        <label for="exampleFormControlInput1" class="form-label text-white text">Nombre</label>
+        <input type="text" class="col-sm form-control my-2" id="" >
+        <label for="exampleFormControlInput1" class="form-label text-white text">Correo Electrónico</label>
+        <input type="email" class="col-sm form-control my-2" id="" >
+        <label for="exampleFormControlInput1" class="form-label text-white text">Asunto</label>
+        <input type="text" class="form-control my-2" id="" >
+        <label for="exampleFormControlInput1" class="form-label text-white text">Mensaje</label>
+        <textarea class="form-control my-2" id="exampleFormControlTextarea1" rows="7"></textarea>
+        <button type="submit" class="btn text-white my-2 bg-info" data-bs-toggle="tooltip" data-bs-placement="right" title="Enviar comentarios">Enviar</button>
+      </form>
+  </div>
+  
   <!-- Footer -->
-<footer>
+<footer class="bg-info">
+  <div class="container">
+    <div class="row">
+    <div class="col-lg-4 hidden-xs">
+      <h4 id="viajes" class="d-flex flex-column flex-sm-row justify-content-center align-items-center text-white my-3" data-toggle="tooltip" data-placement="top" title="Viaja con nosotros">VIAJES CHILE</h4>
+    </div>
+    <div class="col-sm d-flex flex-row justify-content-center align-items-center my-3">
+    <a href="https://github.com/NailethRivero/viajes-chile" target="_blank"><i class="fab fa-github-square fa-2x text-white mx-2"></i></a>
+    <a href="https://www.linkedin.com/in/nailethrivero/" target="_blank"><i class="fab fa-linkedin fa-2x text-white mx-2"></i></a>
+    <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square fa-2x text-white mx-2"></i></a>
+    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-2x text-white mx-2"></i></a>
+    </div>
+    </div>
+  </div>
 
 </footer>
 
